# seqeyes

./: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml
.github/workflows/: _appimage-build.yml  _release-version-guard.yml  _windows-build.yml  build-validate.yml  ci.yml  linux-appimage.yml  linux-manylinux-wheel.yml  python-publish.yml  trajectory-baseline-capture.yml  windows-release.yml
ci/: build_cpp_and_install.sh  install_qt_linux.sh
licenses/: license_safe_pns
matlab/: functionSignatures.json  seqeyes.m
python/seqeyes/: viewer.py
src/: AutomationRunner.cpp  AutomationRunner.h  InteractionHandler.cpp  InteractionHandler.h  KSpaceTrajectory.cpp  PnsCalculator.cpp  PnsCalculator.h  PulseqLoader.cpp  PulseqLoader.h  SeriesBuilder.cpp  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  TRManager.cpp  TRManager.h  WaveformDrawer.cpp  WaveformDrawer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  seqeyes_version.h
test/: CMakeLists.txt  PnsDumpTest.cpp  test_load_all.py  test_perf_zoom.py  test_visual_regression.py  trajectory_regression_cases.yaml
test/tools/: check_trajectory_against_baseline.py  check_trajectory_regression.py  compare_pns_with_matlab.py  generate_trajectory_baselines.py  matlab_calc_pns_cli.m
